--- a/app/src/main/res/layout/activity_friend.xml
+++ b/app/src/main/res/layout/activity_friend.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="30dp"
             android:layout_marginRight="30dp"
-            android:background="@drawable/tictactoe_back"
+            android:background="@drawable/tic_turn"
             android:orientation="vertical"
             android:paddingLeft="40dp"
             android:paddingTop="30dp"
@@ -115,6 +115,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:scaleType="center"
+                    android:tag="-1"
                     android:visibility="gone"
                     app:srcCompat="@drawable/cross" />
             </LinearLayout>
@@ -137,6 +138,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@drawable/tictactoe_back"
+                    android:tag="-2"
                     android:visibility="gone"
                     app:srcCompat="@drawable/cross" />
             </LinearLayout>
@@ -156,6 +158,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:tag="-3"
                     android:visibility="gone"
                     app:srcCompat="@drawable/zero" />
             </LinearLayout>
@@ -185,6 +188,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:tag="-4"
                     android:visibility="gone"
                     app:srcCompat="@drawable/cross" />
             </LinearLayout>
@@ -207,6 +211,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@drawable/tictactoe_back"
+                    android:tag="-5"
                     android:visibility="gone"
                     app:srcCompat="@drawable/cross" />
             </LinearLayout>
@@ -226,6 +231,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:tag="-6"
                     android:visibility="gone"
                     app:srcCompat="@drawable/zero" />
             </LinearLayout>
@@ -259,6 +265,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:tag="-7"
                     android:visibility="gone"
                     app:srcCompat="@drawable/cross" />
             </LinearLayout>
@@ -281,6 +288,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@drawable/tictactoe_back"
+                    android:tag="-8"
                     android:visibility="gone"
                     app:srcCompat="@drawable/cross" />
             </LinearLayout>
@@ -300,6 +308,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:tag="-9"
                     android:visibility="gone"
                     app:srcCompat="@drawable/zero" />
             </LinearLayout>
