--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/tictactoe_back"
+    android:background="@color/friend_pop_back"
     tools:context=".MainActivity">
 
     <TextView
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="156dp"
-        android:background="@drawable/main_back_button"
+        android:background="@drawable/friend_pop_button"
         android:padding="20dp"
         android:text="Play With Computer"
         android:textColor="@color/black"
@@ -41,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="112dp"
-        android:background="@drawable/main_back_button"
+        android:background="@drawable/friend_pop_button"
         android:padding="20dp"
         android:text="Play With Friend"
         android:textSize="20sp"
