--- a/app/src/main/res/layout/won_tie.xml
+++ b/app/src/main/res/layout/won_tie.xml
@@ -5,16 +5,17 @@
     android:background="@color/friend_pop_back"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="15dp">
+    android:padding="5dp">
 
     <TextView
         android:id="@+id/afterMatchText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
+        android:gravity="center"
+        android:padding="10dp"
         android:text="Player name won the Game"
         android:textColor="@color/white"
-        android:textSize="30sp"
+        android:textSize="26sp"
         android:textStyle="bold" />
 
     <Button
